# phasepy

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  tutorial.ipynb
doc/: file_config.md  rule.md
doc/theory/: dendrite.md
input/: setting.txt
input/outdata/: outdata_1.txt
input/param/: param_1.txt  param_format.txt
input/property/: ni.txt
phasepy/: __init__.py  _calc_func.py  _const.py  _error.py  _init_func.py  _input.py  _output.py  core.py
phasepy/dendrite/: _const.py
phasepy/fsma/: _const.py
phasepy/martensite/: _const.py
phasepy/tools/: _array.py  _path.py  _save.py  _var_fmt.py  _xytools.py
sample/chem_npy/: data_1000.npy  data_10000.npy  data_11000.npy  data_12000.npy  data_13000.npy  data_14000.npy  data_15000.npy  data_16000.npy  data_17000.npy  data_18000.npy  data_19000.npy  data_2000.npy  data_20000.npy  data_21000.npy  data_22000.npy  data_23000.npy  data_24000.npy  data_25000.npy  data_26000.npy  data_27000.npy  data_28000.npy  data_29000.npy  data_3000.npy  data_30000.npy  data_4000.npy  data_5000.npy  data_6000.npy  data_7000.npy  data_8000.npy  data_9000.npy
sample/fluct_npy/: data_1000.npy  data_10000.npy  data_11000.npy  data_12000.npy  data_13000.npy  data_14000.npy  data_15000.npy  data_16000.npy  data_17000.npy  data_18000.npy  data_19000.npy  data_2000.npy  data_20000.npy  data_21000.npy  data_22000.npy  data_23000.npy  data_24000.npy  data_25000.npy  data_26000.npy  data_27000.npy  data_28000.npy  data_29000.npy  data_3000.npy  data_30000.npy  data_4000.npy  data_5000.npy  data_6000.npy  data_7000.npy  data_8000.npy  (+1 more)
(+132 files in other folders)
