[tool.poetry]
name = "phasepy"
version = "0.1.0"
description = "This package is phase-field simulation."
authors = ["Shunsuke Sato <8221530@ed.tus.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
numba = "^0.56.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
